public/css/style.css
/* === START CSS RESET === https://andy-bell.co.uk/a-more-modern-css-reset/ */

/* Box sizing rules */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Prevent font size inflation */
html {
    -moz-text-size-adjust: none;
    -webkit-text-size-adjust: none;
    text-size-adjust: none;
}

/* Remove default margin in favour of better control in authored CSS */
body, h1, h2, p {
    margin: 0;
}

/* Make images easier to work with */
img {
    max-width: 100%;
    display: block;
}

/* === END CSS RESET === */

/* COMPOSITION */
:root {
    --white: #FFFFFF;
    --dark-blue-1: #1B1937;
    --dark-blue-2: #0A0C1C;
    --soft-violet: #AB5CDB;
    --transparent-white-1: hsla(0, 0%, 100%, 0.6);
    --transparent-white-2: hsla(0, 0%, 100%, 0.75);
}

body {
    min-height: 100vh;
}

.card {
    display: flex;
    flex-shrink: 0;
    overflow: clip;
}

/* UTILITIES */
.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.font-inter {
    font-family: "Inter", sans-serif;
}

.font-lexend-deca {
    font-family: "Lexend Deca", sans-serif;
}

.bg-primary {
    background-color: var(--dark-blue-2);
}

.bg-secondary {
    background-color: var(--dark-blue-1);
}

.border-r-8px {
    border-radius: 8px;
}

/* BLOCK */
.card-content__title {
    color: var(--white);
    font-weight: 700;
}

.card-content__title-highlight {
    color: var(--soft-violet);
}

.card-content__text {
    color: var(--transparent-white-2);
    font-size: 15px;
    font-weight: 400;
    line-height: 25px;
}

.card-stats__value {
    color: var(--white);
}

.card-stats__label {
    color: var(--transparent-white-1);
    font-size: 12px;
    font-weight: 400;
    text-transform: uppercase;
    letter-spacing: 1px;
    line-height: 25px;
    margin-top: 2px;
}

/* EXCEPTIONS */
@media only screen and (width > 1200px) {
    .card {
        flex-direction: row;
        min-width: 1110px;
        height: 446px;
    }

    .card-content {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: flex-start;
        min-width: 570px;
        height: 100%;
        padding-top: 71px;
        padding-left: 72px;
    }

    .card-content__title {
        width: 403px;
        font-size: 36px;
        line-height: 44px;
    }

    .card-content__text {
        width: 374px;
        margin-top: 25px;
    }

    .card-content-stats-container {
        margin-top: 72px;
    }

    .card-content-stats-container > * {
        display: inline-block;
    }

    #card-stats__block2 {
        margin-left: 64px
    }

    #card-stats__block3 {
        margin-left: 61px
    }

    .card-image {
        background-image: url("../images/image-header-desktop-overlay.jpg");
        width: 100%;
        height: 100%;
    }
}

@media only screen and (width <= 1200px) {
    .card {
        flex-direction: column-reverse;
        justify-content: flex-end;
        max-width: 327px;
        margin: 48px 0;
    }

    .card-image {
        background-image: url("../images/image-header-mobile-overlay.jpg");
        width: 100%;
        height: 240px;
    }

    .card-content {
        padding: 40px 32px 32px;
    }

    .card-content__title {
        width: 100%;
        font-size: 28px;
        line-height: 32px;
        text-align: center;
    }

    .card-content__text {
        width: 100%;
        text-align: center;
        margin-top: 16px;
    }

    .card-content-stats-container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        margin-top: 40px;
    }

    .card-content-stats-container > * + * {
        margin-top: 24px;
    }

    .card-stats > * {
        text-align: center;
    }
}

